tests/compile-test-no-return.rs
use autovec::autovec;
#[autovec]
pub fn fn_2(x: usize) {

}

fn main() { }
